--- a/src/NoName/WebLayer/Web.config
+++ b/src/NoName/WebLayer/Web.config
@@ -5,13 +5,7 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  <configSections>
-    
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebLayer-20151027105829.mdf;Initial Catalog=aspnet-WebLayer-20151027105829;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -21,8 +15,9 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" maxRequestLength="2147483647" executionTimeout="3600" requestLengthDiskThreshold="2147483647" />
-      <customErrors mode="RemoteOnly" defaultRedirect="Error.html" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="2147483647" executionTimeout="3600"
+                 requestLengthDiskThreshold="2147483647" />
+    <customErrors mode="RemoteOnly" defaultRedirect="Error.html" />
   </system.web>
   <system.webServer>
     <modules>
@@ -83,14 +78,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
+
 </configuration>
