--- a/src/NoName/WebLayer/HolyStream.Web.csproj
+++ b/src/NoName/WebLayer/HolyStream.Web.csproj
@@ -165,6 +165,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\FilesModel.cs" />
+    <Compile Include="Models\LogsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -210,13 +211,14 @@
     <Content Include="Views\MediaFile\AddFiles.cshtml" />
     <Content Include="Views\MediaFile\View.cshtml" />
     <Content Include="Views\MediaFile\Delete.cshtml" />
-    <Content Include="Views\Logs\Index.cshtml" />
     <Content Include="Views\Playlist\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
+    <Content Include="Views\Logs\Index.cshtml" />
+    <Content Include="Views\Logs\MediaLog.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\Music\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
