--- a/src/NoName/WebLayer/packages.config
+++ b/src/NoName/WebLayer/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
@@ -22,5 +21,7 @@
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net45" />
   <package id="NHibernateProfiler.Appender" version="3.0.3089.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
