--- a/src/NoName/WebLayer/packages.config
+++ b/src/NoName/WebLayer/packages.config
@@ -4,9 +4,9 @@
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
-  <package id="jQuery" version="1.9.1" targetFramework="net45" />
-  <package id="jQuery.FileUpload" version="9.11.1" targetFramework="net45" />
-  <package id="jQuery.UI.Combined" version="1.9.0" targetFramework="net45" />
+  <package id="FontAwesome" version="4.4.0" targetFramework="net45" />
+  <package id="jQuery" version="2.2.0" targetFramework="net45" />
+  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
@@ -18,8 +18,8 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net45" />
-  <package id="NHibernateProfiler.Appender" version="3.0.3089.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="NHibernateProfiler.Appender" version="3.0.3090.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
