--- a/src/NoName/WebLayer/packages.config
+++ b/src/NoName/WebLayer/packages.config
@@ -6,6 +6,7 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
   <package id="FontAwesome" version="4.4.0" targetFramework="net45" />
   <package id="jQuery" version="2.2.0" targetFramework="net45" />
+  <package id="jQuery.FileUpload" version="9.11.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
